<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWindowDark"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/session_id"
        style="@style/CustomTextAppearance.Text10.Gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/session_id"
        app:layout_constraintBottom_toTopOf="@+id/tv_session_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_session_id"
        style="@style/CustomTextAppearance.Text12.GrayNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_date_time"
        app:layout_constraintEnd_toEndOf="@+id/session_id"
        app:layout_constraintStart_toStartOf="@+id/session_id"
        app:layout_constraintTop_toBottomOf="@+id/session_id" />

    <TextView
        android:id="@+id/tv_date_time"
        style="@style/CustomTextAppearance.Text12.WhiteNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/tv_session_id"
        app:layout_constraintStart_toStartOf="@+id/tv_session_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_session_id" />

    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/received_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_time"
        app:srcCompat="@color/colorTextWhiteWithAlpha50"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/received_data"
        style="@style/CustomTextAppearance.Text10.Gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/received_data"
        app:layout_constraintBottom_toTopOf="@+id/tv_received_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tv_received_data"
        style="@style/CustomTextAppearance.Text12.WhiteNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/duration"
        app:layout_constraintEnd_toEndOf="@+id/received_data"
        app:layout_constraintStart_toStartOf="@+id/received_data"
        app:layout_constraintTop_toBottomOf="@+id/received_data" />

    <TextView
        android:id="@+id/duration"
        style="@style/CustomTextAppearance.Text10.Gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@+id/tv_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_received_data" />

    <TextView
        android:id="@+id/tv_duration"
        style="@style/CustomTextAppearance.Text12.WhiteNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/session_cost"
        app:layout_constraintEnd_toEndOf="@+id/duration"
        app:layout_constraintStart_toStartOf="@+id/duration"
        app:layout_constraintTop_toBottomOf="@+id/duration" />

    <TextView
        android:id="@+id/session_cost"
        style="@style/CustomTextAppearance.Text10.Gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/session_cost"
        app:layout_constraintBottom_toTopOf="@+id/tv_session_cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

    <TextView
        android:id="@+id/tv_session_cost"
        style="@style/CustomTextAppearance.Text12.WhiteNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_make_payment"
        app:layout_constraintEnd_toEndOf="@+id/session_cost"
        app:layout_constraintStart_toStartOf="@+id/session_cost"
        app:layout_constraintTop_toBottomOf="@+id/session_cost" />

    <Button
        android:id="@+id/btn_make_payment"
        style="@style/CustomTextAppearance.OrangeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/make_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_report_payment"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_report_payment"
        style="@style/CustomTextAppearance.BlueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/report"
        app:layout_constraintBottom_toBottomOf="@+id/btn_make_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_make_payment"
        app:layout_constraintTop_toTopOf="@+id/btn_make_payment" />
</android.support.constraint.ConstraintLayout>